--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
   "crates/cli",
   "crates/core",
+  "crates/error",
   "crates/server",
   "crates/storage",
   "crates/time",
@@ -45,6 +46,7 @@ once_cell = "1.19.0"
 open = "5.1.2"
 pace_cli = { path = "crates/cli", version = "0" }
 pace_core = { path = "crates/core", version = "0" }
+pace_error = { path = "crates/error", version = "0" }
 pace_storage = { path = "crates/storage", version = "0" }
 pace_time = { path = "crates/time", version = "0" }
 parking_lot = "0.12.1"
@@ -110,6 +112,7 @@ eyre = { workspace = true }
 human-panic = { workspace = true }
 pace_cli = { workspace = true }
 pace_core = { workspace = true, features = ["cli"] }
+pace_error = { workspace = true }
 pace_storage = { workspace = true, features = ["db"] }
 pace_time = { workspace = true, features = ["cli", "db"] }
 serde = { workspace = true }
