--- a/Cargo.toml
+++ b/Cargo.toml
@@ -134,7 +134,9 @@ insta = { workspace = true, features = ["toml"] }
 insta-cmd = { workspace = true }
 once_cell = { workspace = true }
 predicates = { workspace = true }
+rstest = { workspace = true }
 similar-asserts = { workspace = true }
+strum = { workspace = true }
 tempfile = { workspace = true }
 
 # The profile that 'cargo dist' will build with
