more preparations for database storage
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/crates/time/Cargo.toml
+++ b/crates/time/Cargo.toml
@@ -35,7 +35,7 @@ displaydoc = { workspace = true }
 getset = { workspace = true }
 humantime = { workspace = true }
 pace_error = { workspace = true }
-rusqlite = { workspace = true, optional = true, features = ["bundled", "chrono"] }
+rusqlite = { workspace = true, optional = true, features = ["chrono"] }
 serde = { workspace = true }
 serde_derive = { workspace = true }
 thiserror = { workspace = true }
