--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -20,9 +20,11 @@ include = [
 ]
 
 [features]
-default = ["cli"]
+default = ["cli", "db"]
 cli = ["clap"]
 clap = ["dep:clap"]
+db = ["rusqlite"]
+rusqlite = ["dep:rusqlite"]
 
 [dependencies]
 chrono = { workspace = true, features = ["serde"] }
@@ -30,7 +32,7 @@ chrono-tz = { workspace = true, features = ["serde"] }
 clap = { workspace = true, optional = true, features = ["env", "wrap_help", "derive"] }
 directories = { workspace = true }
 displaydoc = { workspace = true }
-dotenvy = { workspace = true }
+# dotenvy = { workspace = true }
 getset = { workspace = true }
 itertools = { workspace = true }
 merge = { workspace = true }
@@ -40,6 +42,7 @@ pace_error = { workspace = true }
 pace_time = { workspace = true, features = ["rusqlite"] }
 parking_lot = { workspace = true, features = ["deadlock_detection"] }
 rayon = { workspace = true }
+rusqlite = { workspace = true, optional = true, features = ["chrono"] }
 serde = { workspace = true }
 serde_derive = { workspace = true }
 serde_json = { workspace = true }
