--- a/crates/error/Cargo.toml
+++ b/crates/error/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = { workspace = true }
 tera = { workspace = true }
 thiserror = { workspace = true }
 toml = { workspace = true }
+ulid = { workspace = true }
 
 [lints]
 workspace = true
