--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -31,11 +31,13 @@ include = [
 # ]
 
 [dependencies]
+chrono = { workspace = true, features = ["serde"] }
 displaydoc = { workspace = true }
+getset = { workspace = true }
 itertools = { workspace = true }
 libsqlite3-sys = { workspace = true, features = ["bundled"] }
 merge = { workspace = true }
-pace_core = { workspace = true }
+pace_core = { workspace = true, features = ["db"] }
 pace_error = { workspace = true }
 pace_time = { workspace = true, features = ["db"] }
 parking_lot = { workspace = true, features = ["deadlock_detection"] }
@@ -47,6 +49,7 @@ strum = { workspace = true }
 thiserror = { workspace = true }
 toml = { workspace = true, features = ["indexmap", "preserve_order"] }
 tracing = { workspace = true }
+typed-builder = { workspace = true }
 ulid = { workspace = true, features = ["serde"] }
 
 [dev-dependencies]
