--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "crates/core",
   "crates/error",
   "crates/server",
+  "crates/service",
   "crates/storage",
   "crates/time",
 ]
@@ -47,6 +48,7 @@ open = "5.1.2"
 pace_cli = { path = "crates/cli", version = "0" }
 pace_core = { path = "crates/core", version = "0" }
 pace_error = { path = "crates/error", version = "0" }
+pace_service = { path = "crates/service", version = "0" }
 pace_storage = { path = "crates/storage", version = "0" }
 pace_time = { path = "crates/time", version = "0" }
 parking_lot = "0.12.1"
@@ -113,6 +115,7 @@ human-panic = { workspace = true }
 pace_cli = { workspace = true }
 pace_core = { workspace = true, features = ["cli"] }
 pace_error = { workspace = true }
+pace_service = { workspace = true }
 pace_storage = { workspace = true }
 pace_time = { workspace = true, features = ["cli", "db"] }
 serde = { workspace = true }
