--- a/crates/time/Cargo.toml
+++ b/crates/time/Cargo.toml
@@ -20,11 +20,9 @@ include = [
 ]
 
 [features]
-default = ["cli", "db"]
+default = ["cli"]
 cli = ["clap"]
-db = ["rusqlite"]
 clap = ["dep:clap"]
-rusqlite = ["dep:rusqlite"]
 
 [dependencies]
 chrono = { workspace = true, features = ["serde"] }
@@ -35,7 +33,6 @@ displaydoc = { workspace = true }
 getset = { workspace = true }
 humantime = { workspace = true }
 pace_error = { workspace = true }
-rusqlite = { workspace = true, optional = true, features = ["chrono"] }
 serde = { workspace = true }
 serde_derive = { workspace = true }
 thiserror = { workspace = true }
