--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,9 +55,8 @@ parking_lot = "0.12.1"
 predicates = "3.1.0"
 rayon = "1.10.0"
 rstest = "0.18.2"
-rusqlite = "0.30.0"
-sea-query = "0.30.7"
-sea-query-rusqlite = "0.5.0"
+sea-orm = { version = "0.12.15" }
+sea-orm-migration = "0.12.15"
 serde = "1.0.197"
 serde_derive = "1.0.197"
 serde_json = "1.0.114"
@@ -69,6 +68,7 @@ tabled = "0.15.0"
 tempfile = "3.10.1"
 tera = "1.19.1"
 thiserror = "1.0.58"
+tokio = { version = "1.37.0", default-features = false }
 toml = "0.8.12"
 tracing = "0.1.40"
 typed-builder = "0.18.1"
@@ -116,7 +116,7 @@ pace_cli = { workspace = true }
 pace_core = { workspace = true, features = ["cli"] }
 pace_error = { workspace = true }
 pace_service = { workspace = true }
-pace_time = { workspace = true, features = ["cli", "db"] }
+pace_time = { workspace = true, features = ["cli"] }
 serde = { workspace = true }
 serde_derive = { workspace = true }
 thiserror = { workspace = true }
