--- a/crates/service/Cargo.toml
+++ b/crates/service/Cargo.toml
@@ -15,10 +15,10 @@ description = "pace-service - service support library for pace"
 
 [dependencies]
 getset = { workspace = true }
-pace_core = { workspace = true, features = ["db"] }
+pace_core = { workspace = true }
 pace_error = { workspace = true }
 pace_storage = { workspace = true }
-pace_time = { workspace = true, features = ["rusqlite"] }
+pace_time = { workspace = true }
 tracing = { workspace = true }
 typed-builder = { workspace = true }
 wildmatch = { workspace = true }
