ignore marvin attack in audit toml
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/.cargo/audit.toml
+++ b/.cargo/audit.toml
@@ -1,6 +1,7 @@
 [advisories]
 ignore = [
   "RUSTSEC-2024-0320", # ignore yaml-rust being unmaintained
+  "RUSTSEC-2023-0071", # marvin attack, we need to wait for a fix
 ] # advisory IDs to ignore e.g. ["RUSTSEC-2019-0001", ...]
 informational_warnings = [
   "unmaintained",
